# BeaconAuth

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  biome.json  package.json  pnpm-lock.yaml  rsbuild.config.ts  wrangler.jsonc  wrangler.toml  wrangler.workers.jsonc
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  frontend.instructions.md  general.instructions.md  minecraft-mod.instructions.md
.github/workflows/: _build-binaries.yml  build.yml  deploy-cloudflare.yml  release.yml
crates/beacon/: Cargo.toml  build.rs
crates/beacon-core/src/: models.rs
crates/beacon-passkey/: Cargo.toml
crates/beacon-passkey/src/: lib.rs
crates/beacon-worker/: Cargo.toml  wrangler.toml
crates/beacon-worker/migrations/: 0001_init.sql  0002_identities.sql
crates/beacon-worker/src/: wasm.rs
crates/beacon-worker/src/wasm/: cookies.rs  db.rs  env.rs  http.rs  jwt.rs  kv.rs  state.rs  util.rs
crates/beacon-worker/src/wasm/handlers/: config.rs  identity.rs  minecraft.rs  mod.rs  oauth.rs  passkey.rs  session.rs
crates/beacon/src/: app_state.rs  config.rs  crypto.rs  handlers.rs  lib.rs  main.rs  models.rs  server.rs
crates/beacon/src/handlers/: auth.rs  identity.rs  mod.rs  passkey.rs  user.rs
crates/entity/: Cargo.toml
crates/entity/src/: identity.rs  lib.rs  user.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20250112_000001_create_users_table.rs  m20250124_000001_create_all_tables.rs  m20251220_000002_create_identities_table.rs
modSrc/: build.gradle.kts  gradle.properties  settings.gradle.kts
modSrc/common/: build.gradle.kts
modSrc/common/src/main/kotlin/io/github/summpot/beacon_auth/: BeaconAuthMod.kt
modSrc/common/src/main/resources/: beacon_auth.mixins.json
modSrc/fabric/: build.gradle.kts
modSrc/fabric/src/main/resources/: fabric.mod.json
modSrc/forge/: build.gradle.kts
scripts/ci/: ensure-pages-project.mjs  generate-wrangler-ci.mjs
src/: index.css  index.tsx  routeTree.gen.ts
src/components/: theme-provider.tsx
src/components/ui/: button.tsx
src/lib/: motion.ts
src/routes/: __root.tsx  error.tsx  index.tsx  login.tsx  oauth-complete.tsx  profile.tsx  register.tsx  settings.tsx
src/utils/: api.ts
(+29 files in other folders)
