[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

[lib]
name = "beacon_lib"
path = "src/lib.rs"

[[bin]]
name = "beacon"
path = "src/main.rs"

[[bin]]
name = "beacon-lambda"
path = "src/bin/lambda.rs"
required-features = ["serverless"]

[features]
# AWS Lambda / serverless entrypoint support (optional)
serverless = ["dep:lambda-web"]

[dependencies]
# Web Framework
actix-web = { workspace = true }
actix-cors = { workspace = true }

# Database
sea-orm = { workspace = true }
entity = { path = "../entity" }
migration = { path = "../migration" }

# JWT & Crypto
jsonwebtoken = { workspace = true }
p256 = { workspace = true }
ecdsa = { workspace = true }
sha2 = { workspace = true }
bcrypt = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async Runtime
tokio = { workspace = true }

# Utilities
chrono = { workspace = true }
dotenvy = { workspace = true, features = ["clap", "cli"] }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
actix-files = { workspace = true }
rust-embed = { workspace = true }
actix-web-rust-embed-responder = { workspace = true }
mime_guess = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
urlencoding.workspace = true

# HTTP Client
reqwest = { workspace = true }

# WebAuthn
webauthn-rs = { workspace = true }
webauthn-rs-proto = { workspace = true }

# Cache
moka = { workspace = true }

# Serverless (optional)
lambda-web = { version = "0.2.1", optional = true, features = ["actix4"] }

[build-dependencies]
which = { workspace = true }
